--- a/july-rpg-frontend/src/assets/global.css
+++ b/july-rpg-frontend/src/assets/global.css
@@ -8,11 +8,11 @@
     background-color: #00b894;
     color: #fff;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: background-color 0.2s;
 }
 
 .submit-button:hover {
-    background-color: #009874;
+    background-color: #1b6956;
 }
 
 .layer-5{
